--- a/frontend/static/ad.html
+++ b/frontend/static/ad.html
@@ -4,7 +4,7 @@
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
     <style>
       .none-ad-box {
-        height: 90px;
+        min-height: 90px;
         border: 1px solid rgba(0, 0, 0, .1);
         background: #505050;
         color: #FFF;
