i-mobile ad test

--- a/frontend/static/ad.html
+++ b/frontend/static/ad.html
@@ -1,3 +1,4 @@
+<!--
 <html>
   <head>
     <meta charset='utf-8'>
@@ -226,3 +227,12 @@
     </div>
   </body>
 </html>
+-->
+<!-- i-mobile for PC client script -->
+<script type="text/javascript">
+  imobile_pid = "63114";
+  imobile_asid = "1619629";
+  imobile_width = 728;
+  imobile_height = 90;
+</script>
+<script type="text/javascript" src="https://spdeliver.i-mobile.co.jp/script/ads.js?20101001"></script>
