--- a/frontend/static/ad.html
+++ b/frontend/static/ad.html
@@ -2,17 +2,38 @@
   <head>
     <style>
       .none-ad-box { text-align: center }
+
+      /* Desktop */
+      @media (min-width: 1024px) {
+        .hidden-desktop { display: none }
+      }
+
+      /* Mobile */
+      @media (max-width: 1023px) {
+        .hidden-mobile { display: none }
+      }
     </style>
   </head>
   <body>
     <div class='none-ad-box'>
-      <script type='text/javascript'>
-        imobile_pid = '63114';
-        imobile_asid = '1619629';
-        imobile_width = 728;
-        imobile_height = 90;
-      </script>
-      <script type='text/javascript' src='https://spdeliver.i-mobile.co.jp/script/ads.js?20101001'></script>
+      <div class='hidden-mobile'>
+        <script type='text/javascript'>
+          imobile_pid = '63114';
+          imobile_asid = '1619629';
+          imobile_width = 728;
+          imobile_height = 90;
+        </script>
+        <script type='text/javascript' src='https://spdeliver.i-mobile.co.jp/script/ads.js?20101001'></script>
+      </div>
+      <div class='hidden-desktop'>
+        <script type='text/javascript'>
+          imobile_tag_ver = '0.3';
+          imobile_pid = '63114';
+          imobile_asid = '1643813';
+          imobile_type = 'inline';
+        </script>
+        <script type='text/javascript' src='https://spad.i-mobile.co.jp/script/adssp.js?20110215'></script>
+      </div>
     </div>
   </body>
 </html>
