--- a/frontend/static/header-mobile-ad.html
+++ b/frontend/static/header-mobile-ad.html
@@ -1,12 +1,13 @@
 <html>
 
 <head>
-  <script type='text/javascript' src='//t1.daumcdn.net/kas/static/ba.min.js' async></script>
+  <script src="https://ads-partners.coupang.com/g.js"></script>
 </head>
 
 <body>
-  <ins class='kakao_ad_area' style='display:none;' data-ad-unit='DAN-1if0kg0m6vmu9' data-ad-width='320'
-    data-ad-height='100'></ins>
+  <script>
+    new PartnersCoupang.G({ id: 127641 });
+  </script>
 </body>
 
 </html>
