--- a/frontend/static/header-ad.html
+++ b/frontend/static/header-ad.html
@@ -1,12 +1,13 @@
 <html>
 
 <head>
-  <script type='text/javascript' src='//t1.daumcdn.net/kas/static/ba.min.js' async></script>
+  <script src="https://ads-partners.coupang.com/g.js"></script>
 </head>
 
 <body>
-  <ins class='kakao_ad_area' style='display:none;' data-ad-unit='DAN-ubgdccujo9bo' data-ad-width='728'
-    data-ad-height='90'></ins>
+  <script>
+    new PartnersCoupang.G({ "id": 127580, "subId": null });
+  </script>
 </body>
 
 </html>
